<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_explain_top_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location_title"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/little_18"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/dialog_close_bg"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_explain_bottom_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvUpContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:lineSpacingExtra="3dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:text="@string/location_content2"
            android:textColor="@color/gary_content"
            android:textSize="@dimen/little_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/details_icon_line2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvUpdateCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_update_sure_btn"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/location_cancel"
                android:textColor="@drawable/selector_update_text_btn"
                android:textSize="@dimen/little_16" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gary3" />

            <TextView
                android:id="@+id/tvUpdateSure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_update_sure_btn"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/location_sure"
                android:textColor="@drawable/selector_update_text_btn"
                android:textSize="@dimen/little_16" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>