<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_backgroud"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAboutAccuvally"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_about_btn"
            android:drawableLeft="@drawable/setting_about_bg"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/details_icon_jiantou2"
            android:gravity="center|left"
            android:padding="13dp"
            android:text="@string/setting_about_huodongxing"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/little_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/details_icon_line2" />

        <LinearLayout
            android:id="@+id/lyRemindss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_about_btn"
            android:orientation="horizontal"
            android:padding="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/setting_message_bg"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/setting_accu_remind"
                android:textColor="@color/txt_gray"
                android:textSize="@dimen/little_16" />

            <TextView
                android:id="@+id/tvRemind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/details_icon_jiantou2"
                android:text="@string/remind1"
                android:textColor="@color/gary_title"
                android:textSize="@dimen/little_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/details_icon_line2" />

        <LinearLayout
            android:id="@+id/lyVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_about_btn"
            android:gravity="center|left|top"
            android:orientation="horizontal"
            android:padding="13dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/about_icon_version_bg"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/about_icon_version"
                android:textColor="@color/details_title"
                android:textSize="@dimen/little_16" />

            <TextView
                android:id="@+id/tvCheckVersionName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/details_icon_jiantou2"
                android:gravity="right"
                android:textColor="@color/txt_green"
                android:textSize="@dimen/little_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/details_icon_line2" />

        <LinearLayout
            android:id="@+id/lyClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_about_btn"
            android:orientation="horizontal"
            android:padding="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/setting_clear_bg"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/setting_clear"
                android:textColor="@color/txt_gray"
                android:textSize="@dimen/little_16" />

            <TextView
                android:id="@+id/tvCacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="215KB"
                android:textColor="@color/txt_green"
                android:textSize="@dimen/little_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/details_icon_line2" />

        <TextView
            android:id="@+id/tvFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_about_btn"
            android:drawableLeft="@drawable/feedback_icon_bg"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/details_icon_jiantou2"
            android:gravity="center|left"
            android:padding="13dp"
            android:text="@string/setting_feedback"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/little_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/details_icon_line2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_about_btn"
                android:padding="15dp"
                android:text="@string/setting_login_out"
                android:textColor="@color/txt_gray"
                android:textSize="@dimen/little_16" />

            <View
                android:id="@+id/loginView_Line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@drawable/details_icon_line2" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/setting_bottom_bg" />
    </LinearLayout>

</LinearLayout>